syntax = "proto3";
package api;

message TaskMessage{
    string date = 1;
    string time = 2;
    int64 event_id  = 3;//(impression/click)
    int64 partner_id = 4;
}

message Counter{
    int64 revenue = 1;
}

service Statistics{
    rpc GetStatistics(TaskMessage) returns (TaskMessage){}
}

// protoc --go_out=plugins=grpc:.  data.proto